--- a/CSS/hegel-argon.css
+++ b/CSS/hegel-argon.css
@@ -5,8 +5,6 @@
 /* GLOBAL */
 
 body {
-	margin: 0;
-	padding: 0;
 	color: white;
 	font-size: 16px;
 	font-family: "ubuntu";
@@ -20,14 +18,19 @@ a {
 	transition: 0.2s ease;
 }
 
-a:hover:not(.button) {
+a:hover:not(.button), a:active:not(.button) {
 	color: var(--theme-color);
 }
 
 
 /* TEXT FORMATTING */
 
-p, blockquote {
+::selection {
+	color: white;
+	background-color: var(--theme-color);
+}
+
+p, blockquote, .text {
 	line-height: 1.5em;
 }
 
@@ -94,11 +97,9 @@ blockquote {
 }
 
 .button {
-	cursor: pointer;
 	font-weight: 500;
-	user-select: none;
 	text-align: center;
-	display: inline-block;
+	text-decoration: none;
 	transition: background 0.2s ease-out, box-shadow 0.1s ease-out, border-color 0.2s ease-out;
 }
 
@@ -111,7 +112,7 @@ blockquote {
 	animation: button-pulse 1.5s ease infinite;
 }
 
-.button:hover, .button.active {
+.button:hover {
 	background-color: #f53d7a;
 	border-right: 3px solid #c43061;
 	border-bottom: 3px solid #771737;
@@ -153,52 +154,41 @@ blockquote {
 
 .inset {
 	padding: 0.5em;
-	display: inline-block;
 	border-radius: 0.5em;
-	background-color: #1d1e25;
-	border-top: 3px solid #0a0b0e;
-	border-left: 3px solid #14151b;
-	box-shadow: 0 0 0.5em 0.1em rgba(0,0,0,0.2) inset;
-}
-
-.card .inset {
+	display: inline-block;
+	box-sizing: border-box;
 	background-color: #23252E;
 	border-top: 3px solid #0f1014;
 	border-left: 3px solid #181920;
-}
-
-.list-box {
-	display: flex;
-	row-gap: 0.5em;
-	flex-wrap: wrap;
-	padding: 0.5em 0;
-	column-gap: 0.5em;
-	align-items: center;
-	flex-direction: row;
+	box-shadow: 0 0 0.5em 0.1em rgba(0,0,0,0.2) inset;
 }
 
 
 /* IMAGES */
 
 .image-container {
-	overflow: hidden;
-	position: relative;
 	border-radius: 0.25em;
 }
 
-.image-container img {
-	max-width: 100%;
-	vertical-align: middle;
-}
-
 .image-container .caption-overlay {
-	right: 0;
-	bottom: 0;
 	padding: 0.5em;
-	max-width: 80%;
 	font-size: 0.8em;
-	position: absolute;
-	white-space: nowrap;
 	border-radius: 0.5em 0 0 0;
 	background-color: rgba(0,0,0,0.5);
+}
+
+
+/* NAVBAR */
+
+.navbar {
+	padding: 1em 2em;
+	background: #2a2c35;	
+	border-bottom: 3px solid #0f1014;
+	box-shadow: 0 0.2em 0.2em 0.1em rgba(0,0,0,0.2);
+	transition: 0.2s ease;
+}
+
+.navbar .nav-banner {
+	font-size: 1.5em;
+	font-weight: 500;
 }
