--- a/CSS/hegel-argon.css
+++ b/CSS/hegel-argon.css
@@ -23,7 +23,7 @@ a {
 	color: inherit;
 }
 
-a:visited {
+a:visited:not(.button) {
 	color: #aaa;
 }
 
@@ -31,13 +31,6 @@ a:visited {
 
 p, .text {
 	line-height: 1.5em;
-}
-
-p.drop-caps::first-letter {
-	float: left;
-	font-size: 3.4em;
-	line-height: 3.75em;
-	padding: 0.25rem 0.5rem 0 0.1rem;
 }
 
 /* Formatting */
@@ -65,6 +58,11 @@ p.drop-caps::first-letter {
 
 /* Headings */
 
+.blazon, .heading {
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 .blazon {
 	font-size: 4em;
 	font-weight: 500;
@@ -72,11 +70,9 @@ p.drop-caps::first-letter {
 
 .heading {
 	font-size: 2em;
-	overflow: hidden;
 	font-weight: 500;
 	margin-bottom: 1rem;
 	padding-bottom: 1rem;
-	text-overflow: ellipsis;
 	border-bottom: 2px solid #f53d7a;
 }
 
@@ -87,20 +83,21 @@ p.drop-caps::first-letter {
 	padding: 1em 2em;
 	background: #2a2c35;	
 	border-bottom: 3px solid #0f1014;
-	box-shadow: 0 0.2em 0.2em 0.1em rgba(0,0,0,0.2);
+	box-shadow: 0 0 0.2em 0.1em rgba(0,0,0,0.3);
 	transition: 0.2s ease;
 }
 
 
-/* CARDS & BUTTONS */
+/* VISUAL CONTAINERS */
 
-/* Cards */
+.card, .button, .inset {
+	box-sizing: border-box;
+}
 
 .card, .button {
 	padding: 1em;
 	border-radius: 0.5em;
 	background: #2a2c35;
-	box-sizing: border-box;
 	border-right: 3px solid #1b1d25;
 	border-bottom: 3px solid #0f1014;
 	box-shadow: 0 0 0.5em 0.1em rgba(0,0,0,0.1);
@@ -126,23 +123,17 @@ p.drop-caps::first-letter {
 
 .button:active {
 	margin: 0 3px 3px 0;
+	border-width: 0px !important;
 	transform: translate(3px, 3px);
 	background: #f53d7a !important;
-	border-right: 0px solid #c43061 !important;
-	border-bottom: 0px solid #771737 !important;
 	box-shadow: 0 0 0.5em 0.3em rgba(255, 31, 105, 0.5) !important;
 }
-
-
-/* GENERIC CONTAINERS */
 
 /* Inset */
 
 .inset {
 	padding: 0.5em;
 	border-radius: 0.5em;
-	display: inline-block;
-	box-sizing: border-box;
 	border-top: 3px solid #0f1014;
 	border-left: 3px solid #181920;
 	background-color: rgba(0,0,0,0.1);
