--- a/CSS/hegel-argon.css
+++ b/CSS/hegel-argon.css
@@ -3,8 +3,8 @@
 body {
 	color: white;
 	font-size: 16px;
-	font-family: "ubuntu";
 	background: #23252E;
+	font-family: 'Ubuntu', sans-serif;
 }
 
 
